proj2b: Downgraded JDK